Change log for Defense Condition game project

Author(s): Ray Gardener (support@daylongraphics.com)
Repository: https://github.com/RayOfDaylon/Defcon
September 15, 2023


Changed radar's visible arena section lines to use 
arcade style thick rectangle sections.

Added boolean RaderIsPlayerCentric pref which, if false, 
arcade matches the radar centricity where the edges of 
the visible arena stay fixed in position instead of 
the player ship. Technically, a radar would always 
have the ship centered, and setting the pref to true 
will allow that.

Changed color of play area section dividers from gray to dark red.
Also thickened the stats-radar divider a bit to look closer 
in linewidth to the horizontal divider.

Added UTextBlock "TopMessage" to main arena widget, 
which now shows the "game paused" message instead of 
using the message log. It will also show the planned
"pod intersection" message.

Added help page for humans.

Changed human texture to animated, more detailed version.

Player ship appears redder as its shields weaken.

If all humans are killed and the player ship dies, 
the mission ends but the game transitions to the 
game over screen, instead of restarting the mission 
(which is pointless to play since it's just enemies 
without any humans to defend. Even if the next 
mission is a dogfight, the mission after that 
will be empty of humans).

Shield strength updates use CMessageMediator class, 
and shield readout changes color from blue to red 
as shields weaken.

Smartbomb count moved from game match to player ship.

Smartbomb count updates use CMessageMediator class.

Human count updates use new CMessageMediator template class
to improve loose coupling.

Finished the new "Humans" readout on the stats panel, 
which shows safe humans as green squares, abducted humans 
as red squares. The number of squares decreases as 
humans are killed.

Arena bog down slowest time factor increased from 0.5 to 0.67; 