@@ -4,6 +4,7 @@
 #pragma once
 
 #include "enemies.h"
+#include "Globals/prefs.h"
 
 
 
@@ -17,6 +18,7 @@ namespace Defcon
 			CSpacehum();
 			
 			virtual void  Tick                  (float DeltaTime) override;
+			virtual float GetCollisionForce     () const override { return 0.01f * SPACEHUM_COLLISION_FORCE; }
 			virtual float GetExplosionMass      () const override { return 0.1f; }
 			bool          ExplosionHasFireball  () const override { return false; }
 			void          Explode               (CGameObjectCollection&) override;
