@@ -21,7 +21,7 @@ void Defcon::CYllabianEscort::Init()
 		"Engage enemy forces and eliminate them."
 	;
 
-	JFactor = 0.1f;
+	SpawnTimeFactor = 0.1f;
 
 	AddEnemySpawnInfo({ EObjType::GUPPY,   { 24, 30, 30, 30 } });
 	AddEnemySpawnInfo({ EObjType::SWARMER, {  3,  3,  3,  3 } });
